--- a/doc-css/nav.css
+++ b/doc-css/nav.css
@@ -1,7 +1,7 @@
 .nav-bar-main{
     display: flex;
     /* flex-wrap: wrap; */
-    border: 2px solid black;
+    /* border: 2px solid black; */
     grid-area: header;
     width: 100%;
     height: 10vh;
@@ -9,6 +9,8 @@
 }
 .nav-pills{
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 2rem;
 }
 .contact-links{
@@ -16,7 +18,7 @@
     flex-wrap: wrap;
     width: 100%;
     justify-content: flex-end;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     /* height: 6vh; */
     /* padding-top: 1rem; */
     align-items: center;
