--- a/doc-css/section.css
+++ b/doc-css/section.css
@@ -1,6 +1,11 @@
 .section-main{
     grid-area: section;
     padding: 1rem;
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
 }
 
+.component-intro{
+    padding: 1rem;
+    border-radius: 5px;
+    /* border: 2px solid var(--primary-color); */
+}
