--- a/component css/badge.css
+++ b/component css/badge.css
@@ -1,22 +1,31 @@
+:root{
+    --badge-icon-color: #229ED9;
+    --online-color: green;
+    --offline-color: red;
+    --standby-color: blueviolet;
+    --white-color: white;
+    --black-color: black;
+}
+
 .badge{
     border-radius: 50%;
 }
-.badge-avatar-container{
+.badge-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: fit-content;
-    max-height: fit-content;
-    /* border: 1px solid; */
+    flex-wrap: wrap;
 }
+
+
 .online-status{
     position: absolute;
     margin-top: 6rem;
     margin-left: 7.7rem;
     height: 0.8rem;
     width: 0.8rem;
-    border: 2px solid white;
-    background-color: green;
+    border: 2px solid var(--white-color);
+    background-color: var(--online-color);
 }
 .offline-status{
     margin-left: 6rem;
@@ -24,8 +33,8 @@
     position: absolute;
     height: 0.8rem;
     width: 0.8rem;
-    border: 2px solid white;
-    background-color: red;
+    border: 2px solid var(--white-color);
+    background-color: var(--offline-color);
 }
 .standby-status{
     position: absolute;
@@ -33,38 +42,38 @@
     margin-top: 3.4rem;
     height: 0.8rem;
     width: 0.8rem;
-    border: 2px solid white;
-    background-color: blueviolet;
+    border: 2px solid var(--white-color);
+    background-color: var(--standby-color);
 }
 #dnd-status{
     position: absolute;
     font-size: 0.8rem;
     margin-top: 2rem;
     margin-left: 3.4rem;
-    color: red;
-    border: 2px solid white;
-    background-color: black;
+    color: var(--offline-color);
+    border: 2px solid var(--white-color);
+    background-color: var(--black-color);
     border-radius: 50%;
 }
 .fa-shopping-cart{
     font-size: 2rem;
-    color: #047bd5;
+    color: var(--badge-icon-color);
 }
 .fa-paper-plane{
     font-size: 3rem;
-    color: white;
-    background-color: #229ED9;
+    color: var(--white-color);
+    background-color: var(--badge-icon-color);
     border-radius: 50%;
 }
 .badge-icon{
     border-radius: 50%;
-    color: white;
+    color: var(--white-color);
     width: 1rem;
     height: 1rem;
     display: flex;
     justify-content: center;
     padding: 2px;
-    border: 2px solid white;
+    border: 2px solid var(--white-color);
     background-color: var(--primary-color);
 }
 .badge-shopping-cart{
@@ -72,10 +81,6 @@
     margin-bottom: 2rem;
     margin-left: 2rem;
 }
-.badge-outputs{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
+.gap-10{
     gap: 10rem;
 }
