--- a/doc-css/footer.css
+++ b/doc-css/footer.css
@@ -1,4 +1,38 @@
 .footer-main{
+    display: flex;
+    justify-content: flex-start;
+    padding: 10px;
+    align-items: center;
     grid-area: footer;
-    border: 2px solid red;
+    height: 10rem;
+    border: 1px solid white;
+    border-top-color: gray;
+}
+
+.footer-main div:nth-child(2){
+    margin-left: auto;
+    
+}
+.icon-container{
+    display: flex;
+    gap: 1rem;
+    /* border: 2px solid green; */
+}
+
+.footer-icon:hover{
+    color: var(--primary-color);
+    background-color: white;
+}
+
+.footer-icon{
+    font-size: 20px;
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    background-color: black;
+    color: white;
 }
