--- a/doc-css/nav.css
+++ b/doc-css/nav.css
@@ -3,6 +3,10 @@
     grid-area: header;
     width: 100%;
     height: 10vh;
+    border: 1px solid var(--secondary-color);
+    border-top-color: var(--white-color);
+    border-left-color: var(--white-color);
+    border-right-color: var(--white-color);
 }
 .nav-pills{
     display: flex;
@@ -18,4 +22,10 @@
     align-items: center;
     padding-right: 1rem;
     gap: 1.5rem;
+}
+
+.nav-button > a:hover{
+    text-decoration: underline;
+    color: var(--primary-color);
+    text-decoration-color: var(--hover-primary-color);
 }
