--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
 @import "./component css/card.css";
 @import "./component css/image.css";
 @import "./component css/Input.css";
+@import "./component css/rating.css";
+@import "./component css/text_utility.css";
+
+
 * {
   font-family: "Noto Sans", sans-serif;
 }
@@ -42,10 +46,11 @@
   padding-right: 0.2rem;
   padding-left: 0.2rem;
 }
-.component-outputs {
+.component-outputs{
   margin: 1rem;
   padding: 1rem;
   border-radius: 0.2rem;
+  box-shadow: 0px 0px 10px 4px rgb(0 0 0 / 5%);
 }
 
 .section-component {
