--- a/doc-css/nav.css
+++ b/doc-css/nav.css
@@ -3,6 +3,12 @@
     grid-area: header;
     width: 100%;
     height: 10vh;
+    position: sticky;
+    z-index: 1;
+    right: 0;
+    left: 0;
+    top: 0;
+    background-color: var(--white-color);
     border: 1px solid var(--secondary-color);
     border-top-color: var(--white-color);
     border-left-color: var(--white-color);
