--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 @import "./component css/rating.css";
 @import "./component css/text_utility.css";
 @import "./component css/navbar.css";
+@import "./component css/slider.css";
 
 
 * {
