--- a/component css/slider.css
+++ b/component css/slider.css
@@ -24,7 +24,7 @@
     background: var(--primary-color); 
     -webkit-appearance: none; 
     appearance: none;
-    width: 15px;
-    height: 15px;
+    width: 1rem;
+    height: 1rem;
   }
   
