fix: responsive design

--- a/doc-css/side-bar.css
+++ b/doc-css/side-bar.css
@@ -63,7 +63,7 @@
   animation-iteration-count: 1;
   animation-duration: 1s;
   animation-name: supportanimation;
-  height: 100vh;
+  height: 100%;
   opacity: 1;
 }
 
