--- a/doc-css/nav.css
+++ b/doc-css/nav.css
@@ -3,7 +3,7 @@
     grid-area: header;
     width: 100%;
     height: 10vh;
-    position: sticky;
+    /* position: sticky; */
     z-index: 1;
     right: 0;
     left: 0;
