--- a/component css/modal.css
+++ b/component css/modal.css
@@ -1,16 +1,24 @@
-.modal-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 20rem;
-    height: 15rem;
-    background-color: aliceblue;
+.modal-container {
+  text-align: center;
+  width: 20rem;
+  height: 15rem;
+  background-color: aliceblue;
+  position: relative;
 }
-#example-modal-interstitial{
-    position: fixed;
-    top: 50%;
+.modal-items {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-#example-modal-interstitial{
-    display: none;
+#example-modal-interstitial {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30;
+  display: none;
+}
+#Modal {
+  position: relative;
 }
