--- a/doc-css/nav.css
+++ b/doc-css/nav.css
@@ -1,53 +1,56 @@
-.nav-bar-main{
-    display: flex;
-    grid-area: header;
-    width: 100%;
-    height: 10vh;
-    /* position: sticky; */
-    z-index: 1;
-    right: 0;
-    left: 0;
-    top: 0;
-    background-color: var(--white-color);
-    border: 1px solid var(--secondary-color);
-    border-top-color: var(--white-color);
-    border-left-color: var(--white-color);
-    border-right-color: var(--white-color);
+.nav-bar-main {
+  display: flex;
+  grid-area: header;
+  width: 100%;
+  z-index: 1;
+  background-color: var(--white-color);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  height: 5rem;
 }
-.nav-pills{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 20rem;
+.brand-first-logo {
+  color: var(--black-color);
+  font-weight: 700;
 }
-.contact-links{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: flex-end;
-    align-items: center;
-    padding-right: 1rem;
-    gap: 1.5rem;
+.brand-logo:hover{
+  transition: all 0.6s ease;
+  transform: rotateY(360deg);
 }
-.contact-links a{
-    font-size: 1.5rem;
-    color: var(--black-color);
+.nav-pills {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 20rem;
 }
-.contact-links a:hover{
-    color: var(--hover-primary-color);
+.contact-links {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 1rem;
+  gap: 1.5rem;
 }
-.nav-button > a:hover{
-    text-decoration: underline;
-    color: var(--primary-color);
-    text-decoration-color: var(--hover-primary-color);
+.contact-links a {
+  font-size: 1.5rem;
+  color: var(--black-color);
+  transition: all 0.2s ease;
 }
-.hamburger-menu{
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
-    color: var(--primary-color);
-    margin-left: 0.5rem;
+.contact-links a:hover {
+  color: var(--hover-primary-color);
 }
-.hamburger-menu i{
-    cursor: pointer;
+.nav-button > a {
+    transition: all 0.2s ease;
+}
+.nav-button > a:hover {
+  color: var(--primary-color);
+}
+.hamburger-menu {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  color: var(--primary-color);
+  margin-left: 0.5rem;
+}
+.hamburger-menu i {
+  cursor: pointer;
 }
