--- a/doc-css/side-bar.css
+++ b/doc-css/side-bar.css
@@ -1,17 +1,20 @@
 .side-bar-main {
   grid-area: sidebar;
   position: sticky;
-  top: 0;
-  bottom: 1rem;
+  top: 0rem;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  max-height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
   width: 100%;
   height: fit-content;
 }
+
+.side-bar-main-static {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: calc(100vh - 8rem);
+}
+
 .side-bar-component {
   display: flex;
   flex-direction: column;
