--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import "./doc-css/nav.css";
 @import "./doc-css/footer.css";
 @import "./doc-css/side-bar.css";
@@ -20,29 +21,31 @@
 @import "./component css/modal.css";
 
 * {
-  font-family: "Noto Sans", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
 }
-html{
-  scroll-behavior: smooth;
+
+body {
+  margin: 0rem;
+  box-sizing: border-box;
 }
 :root {
   --primary-color: #eb5eeb;
   --hover-primary-color: #fc2efc;
   --secondary-color: #80808044;
-  --hover-secondary-color: #8080807c;  
+  --hover-secondary-color: #8080807c;
   --dark-secondary-color: gray;
   --component-hover-color: #f1f1f1;
 }
 .body-grid-items {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 25% 75%;
   grid-template-areas:
-    "header header header header header"
-    "sidebar section section section section"
-    "sidebar section section section section"
-    "sidebar section section section section"
-    "footer footer footer footer footer";
+    "header header"
+    "sidebar section "
+    "sidebar section "
+    "sidebar section "
+    "footer footer ";
   max-width: 100vw;
   width: 100%;
 }
@@ -56,34 +59,36 @@ html{
   padding-right: 0.2rem;
   padding-left: 0.2rem;
 }
-.component-outputs{
+.component-outputs {
   margin: 1rem;
   padding: 1rem;
   border-radius: 0.2rem;
-  box-shadow: 0px 0px 10px 4px rgb(0 0 0 / 5%);
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  box-sizing: border-box;
 }
 
 .section-component {
-  border: 2px solid var(--primary-color);
-  border-radius: 5px;
-  padding: 2rem;
+  padding: 1rem;
+  border-radius: 3px;
   margin: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  box-sizing: border-box;
 }
-@media screen and (min-width: 750px){
-  .hide-logo{
+@media screen and (min-width: 750px) {
+  .hide-logo {
     display: block;
   }
-  .hamburger-menu{
+  .hamburger-menu {
     display: none;
   }
-  body{
+  body {
     background-color: var(--white-color);
   }
-  .side-bar-main-mobile-view{
+  .side-bar-main-mobile-view {
     display: none;
     height: 100vh;
   }
-  .side-bar-main{
+  .side-bar-main {
     display: block;
   }
 }
@@ -97,23 +102,23 @@ html{
       "header"
       "section"
       "footer";
-      width: 100%;
-      max-width: 100vw;
-  }
-  body{
     width: 100%;
     max-width: 100vw;
   }
-  .side-bar-main{
+  body {
+    width: 100%;
+    max-width: 100vw;
+  }
+  .side-bar-main {
     display: none;
   }
-  .side-bar-main-mobile-view{
+  .side-bar-main-mobile-view {
     display: none;
   }
-  .hide-logo{
+  .hide-logo {
     display: none;
   }
-  .nav-button{
+  .nav-button {
     margin-left: 2rem;
   }
 }
@@ -142,31 +147,46 @@ html{
   width: 3rem;
   height: 3rem;
   display: flex;
+  cursor: pointer;
   color: white;
   justify-content: center;
   border-radius: 50%;
   box-shadow: 0px 0px 5px 0px var(--primary-color);
+  transition: all 0.2s ease;
 }
 
 .floating-button:hover {
-  box-shadow: 0px 0px 10px 0px var(--hover-primary-color);
   background-color: var(--hover-primary-color);
+  transform: translateY(-5px);
+  transition: transform 1s ease;
 }
 
 .floating-button i:nth-child(n) {
   align-self: center;
 }
 .brand-logo {
-  font-size: 1.2rem;
   font-family: "Syne Tactile", cursive;
   color: var(--primary-color);
+  font-size: xx-large;
+  text-decoration: none;
+  padding-left: 1rem;
 }
 
-.installation-container{
+.installation-container {
   display: flex;
+  padding: 1rem;
 }
-.installation-guide{
+.installation-guide {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  width: 50%;
+}
+.installation-container > .code-snippet {
+  width: 50%;
+}
+
+.component-header {
+  margin-top: 0rem;
+  font-weight: 700;
+  font-size: 2.5rem;
 }
