--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
   grid-template-columns: 25% 75%;
   grid-template-areas:
     "header header"
+    "progress_bar progress_bar"
     "sidebar section "
     "sidebar section "
     "sidebar section "
@@ -100,6 +101,7 @@ body {
     grid-template-columns: 1fr;
     grid-template-areas:
       "header"
+      "progress_bar"
       "section"
       "footer";
     width: 100%;
@@ -189,4 +191,12 @@ body {
   margin-top: 0rem;
   font-weight: 700;
   font-size: 2.5rem;
+}
+#progress-bar {
+  grid-area: progress_bar;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: #eb5eeb;
+  height: 0.2rem;
 }
